project comp & edit wv scrollbar issue

--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -69,7 +69,7 @@
 	height: 100%;
 }
 @mixin section {
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 }
 
